--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,18 @@
-h2 {
-  color: red;
-  width: 400px;
-  background-color: blue;
-  text-align: center;
-  padding: 1rem;
+@import "../src/common/colors.scss";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+}
+a {
+  text-decoration: none;
+}
+
+body {
+  background: $primary-color;
+}
+.container {
+  margin: 0px 40px;
 }
