--- a/src/App.scss
+++ b/src/App.scss
@@ -10,10 +10,10 @@ a {
   text-decoration: none;
 }
 
-// body {
-//   background: $primary-color;
-//   color: $font-primary;
-// }
+body {
+  background: $primary-color;
+  color: $font-primary;
+}
 .container {
   margin: 0px 40px;
 }
